[package]
name = "cron-disc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# path = "src/lib.rs"
# crate-type = ["cdylib"]

[patch.crates-io]
tokio = { git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.36.x" }
socket2 = { git = "https://github.com/second-state/socket2.git", branch = "v0.5.x" }
hyper = { git = "https://github.com/second-state/wasi_hyper.git", branch = "v0.14.x" }
reqwest = { git = "https://github.com/second-state/wasi_reqwest.git", branch = "0.11.x" }
mio = { git = "https://github.com/second-state/wasi_mio.git", branch = "v0.8.x" }
teloxide-core = { git = "https://github.com/flows-network/teloxide.git", branch = "0.13.x" }

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "net", "time"] }
log = "0.4"
schedule-flows = "0.3.0"

reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"